# surya

./: README.md  pyproject.toml
signatures/version1/: cla.json
surya/: settings.py
surya/common/: compat.py  rfdetr_torch.py  rtdetr_onnx.py
surya/common/batch_service/: __init__.py  client.py  config.py  serialize.py  server.py
surya/common/order/: __init__.py  order_ar.py  predictor.py
surya/common/rfdetr/: __init__.py  predictor.py
surya/common/rfdetr/models/: __init__.py  lwdetr.py  position_encoding.py  transformer.py
surya/common/rfdetr/models/backbone/: __init__.py  backbone.py  dinov2.py  dinov2_with_windowed_attn.py
surya/common/rfdetr/models/ops/functions/: __init__.py
surya/common/rfdetr/models/ops/modules/: __init__.py  ms_deform_attn.py
surya/common/rfdetr/util/: misc.py
surya/detection/: __init__.py  client.py  config.py  server.py
surya/detection/model/: encoderdecoder.py
surya/fast_layout/: __init__.py  client.py  config.py  server.py
surya/inference/: __init__.py  parsers.py  prompts.py  schema.py
surya/inference/backends/: base.py  llamacpp.py  openai_client.py  spawn.py  vllm.py
surya/ocr_error/: __init__.py  client.py  config.py  loader.py  schema.py  server.py
surya/ocr_error/model/: config.py
surya/recognition/: __init__.py
surya/scripts/: streamlit_app.py  table_recognition.py
surya/scripts/templates/: surya_screenshot.html
surya/table_rec/: __init__.py  schema.py
tests/: conftest.py  test_detection.py  test_fast_layout_server.py
